lesson23/diag.yml
apiVersion: v1
kind: Pod
metadata:
  name: diag-pod
  namespace: dev
spec:
  containers:
  - name: busybox
    image: busybox:latest
    command: ["sleep", "8400"]
  serviceAccountName: diag-sa
